# web7-clock

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
clocks/cyber/: index.html
clocks/fireplace/: index.html
clocks/flip/: index.html
clocks/forest/: index.html
clocks/glass/: index.html
clocks/gradient/: index.html
clocks/matrix/: index.html
clocks/minimal/: index.html
clocks/neon/: index.html
clocks/ocean/: index.html
clocks/retro/: index.html
clocks/terminal/: index.html
css/: common.css
js/: clock.js
scripts/: copy-assets.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
